src/test/resources/test/coco/valid/T1.struct
package test.coco.valid;

struct T1 {
  B f1;
  Z (0 : oo) f2;
  Q f3;
  Q[][][] f4;
}
