src/test/resources/test/coco/invalid/ModelWithPrimitiveTypes2.struct
package test.coco.invalid;

struct ModelWithPrimitiveTypes2 {
  Q f1;
  Z(0 : oo) f2;
  boolean[][][] f3;
}
